# libatla

./: .clang-format  .gitignore  .gitmodules  .gitrepo  CMakeLists.txt  Makefile  README.md  atla-test.lua  atlaconfig.h.in
include/atla/: atla.h  atla_config.h  atla_context.h  atla_datablob.h  atla_datadeftypes.h  atla_debug.h  atla_def_begin.h  atla_def_end.h  atla_deserialisetypes.h  atla_ioaccess.h  atla_iostream.h  atla_md5.h  atla_memhandler.h  atla_schema.h  atla_serialisationtypes.h  atla_serialiser.h  atla_type_begin.h  atla_type_end.h  atla_type_next.h  atla_types.h  atla_utils.h  hashtable.h
src/: atla.c  atla.cmake  atla_context.c  atla_datablob.c  atla_md5.c  hashtable.c
src/atlalc/: atlalc.c
test/: atla_unittest.c
test/01_basic/: basic.lua
test/02_split/: foo.lua  main.c  vec2.lua  vec3.lua
tests/: tests.cmake  unittest_types.h
tests/01_basic/: main.c
tests/02_obj_ref/: main.c
